@@ -1,6 +1,6 @@
 
 #check_PROGRAMS=testfind1 testuhuru1 testuhuruscan1 testxmlreport1 testprotocol1 testprotocol2
-check_PROGRAMS=testuhuru1 testuhuruscan1 testxmlreport1 testconfparser1 testipcreceive1 testipcsend1
+check_PROGRAMS=testuhuru1 testuhuruscan1 testxmlreport1 testconfparser1 testipcreceive1 testipcsend1 testdir1
 
 AM_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GMODULE2_CFLAGS@ @LIBXML2_CFLAGS@
 LDADD=$(top_builddir)/src/lib/libuhuru.la @GMODULE2_LIBS@ @LIBXML2_LIBS@ -lmagic
@@ -10,6 +10,7 @@ testxmlreport1_SOURCES=testxmlreport1.c
 testconfparser1_SOURCES=testconfparser1.c
 testipcsend1_SOURCES=testipcsend1.c
 testipcreceive1_SOURCES=testipcreceive1.c
+testdir1_SOURCES=testdir1.c
 
 #testfind1_SOURCES=testfind1.c
 #testprotocol1_SOURCES=testprotocol1.c
